docs/apim/4.11/gravitee-expression-language.md
# Gravitee Expression Language

## Overview

Gravitee Expression Language (EL) queries and manipulates object graphs to dynamically configure API aspects and policies. Use EL to reference values from the current API transaction and create dynamic filters, routing rules, and policies that respond to specific conditions or parameters.

EL extends the Spring Expression Language (SpEL) by providing additional object properties inside the expression language context. The full SpEL syntax is available in EL. Gravitee has implemented customizations detailed in this guide.

For security, the EL engine restricts the expressions it evaluates: only the Java methods and constructors on its allowlist are callable, property access is read-only, and bean references aren't available. To make additional classes or methods callable, configure the `el.whitelist` section of the Gateway `gravitee.yml` file.

{% hint style="info" %}
**Object properties**

Custom properties and attributes have special meanings in the Gravitee ecosystem:

* **Custom properties:** Defined at the API level and read-only during the Gateway's execution of an API transaction. Learn more about setting an API's custom properties in \[link to custom properties documentation].
* **Attributes:** Scoped to the current API transaction and can be manipulated during the execution phase through the `assign-attributes` policy. Attributes attach additional information to a request or message via a variable that is dropped after the API transaction completes.
{% endhint %}

## Basic usage

This section summarizes:

* Object properties added to the Expression Language (EL) context
* How attributes are accessed for v4 and v2 APIs
* Commonly used operators and functions

{% tabs %}
{% tab title="Syntax" %}
**Expressions**

Expressions in Gravitee are enclosed in curly braces `{}` and begin with the `#` symbol. Both dot notation and bracket notation are supported for accessing object properties.

Example: `{#context.attributes['user'].email}`

{% hint style="info" %}
**Dot notation vs bracket notation**

Dot notation doesn't work with special characters:

`{#request.headers.my-header}` ← **This will result in an error**

Use bracket notation for property names that include a space or hyphen, or start with a number:

`{#request.headers['my-header']}`
{% endhint %}

**Lists**

Expressions can be used to assign lists, for example: `{({'admin', 'writer'})}`

1. The outer curly braces start and end the EL expression
2. The parentheses indicate an object is being instantiated
3. The list comprises the inner brackets and enclosed values: `{'admin', 'writer'}`
{% endtab %}

{% tab title="Object properties" %}
EL allows you to reference certain values injected into the EL context as object properties. The available object properties are detailed in later sections. EL adds the following root-level object properties:

* `{#api.properties}`: Custom properties defined by the API publisher for that Gateway API
* `{#dictionaries}`: Custom dictionaries defined by the API publisher for that Gateway API
* `{#endpoints}`: Information about the Gateway API's respective endpoints
* `{#request}`: Information about the current API request
* `{#response}`: Information about the current API response
* `{#message}`: Information about the current API message
* `{#node}`: Information about the node hosting the instance of the Gateway handling the API transaction
* `{#application}`: Information about the consumer's Application authenticated by the Gateway (for example: `{#application.metadata['some_key']}`)
* `{#subscription}`: Information about the consumer's Subscription authenticated by the Gateway (for example: `{#subscription.metadata['some_key']}`)
{% endtab %}

{% tab title="Attributes" %}
The `attributes` object property contains attributes that are automatically created by the APIM Gateway during an API transaction or added during the execution phase through the Assign Attributes policy. Attributes fall into one of two categories based on API type:

* `{#context.attributes}`: Attributes associated with v2 APIs or v4 Proxy APIs. A v4 Proxy API is created using the **Proxy upstream protocol** method.
* `{#message.attributes}`: Attributes associated with v4 Message APIs. These APIs are created using the **Introspect messages from event-driven backend** method.

See the v4 API creation wizard for more details.
{% endtab %}

{% tab title="Operators" %}
EL supports various operators, such as arithmetic, logical, comparison, and ternary operators. Examples of commonly used operators in Gravitee include:

* Arithmetic operators: `+`, `-`, `*`, `/`
* Logical operators: `&&` (logical and), `||` (logical or), `!` (logical not)
* Comparison operators: `==`, `!=`, `<`, `<=`, `>`, `>=`
* Ternary operators: `condition ? expression1 : expression2`
{% endtab %}

{% tab title="Functions" %}
EL provides a variety of built-in functions to manipulate and transform data in expressions. Examples of commonly used functions in Gravitee include:

* String functions: `length()`, `substring()`, `replace()`
* `#jsonPath`: Evaluates a JSONPath expression on a specified object. This function delegates to the Jayway JSONPath library. The best way to learn JSONPath syntax is by using the online evaluator.
* `#xpath`: Evaluates an `xpath` on a provided object. For more information regarding XML and XPath, see XML Support - Dealing with XML Payloads in the SpEL documentation.

**`jsonPath` example**

As an example of how `jsonPath` can be used with EL, suppose you have a JSON payload in the request body that contains the following data:

```json
{
  "store": {
    "book": [
      {
        "category": "fiction",
        "author": "Herman Melville",
        "title": "Moby Dick",
        "isbn": "0-553-21311-3",
        "price": 8.99
      },
      {
        "category": "fiction",
        "author": "J. R. R. Tolkien",
        "title": "The Lord of the Rings",
        "isbn": "0-395-19395-8",
        "price": 22.99
      }
    ]
  }
}
```

To extract the value of the `price` property for the book with `title` "The Lord of the Rings," use the following expression:

`{#jsonPath(#request.content, "$.store.book[?(@.title=='The Lord of the Rings')].price")}`
{% endtab %}

{% tab title="Request/Response body access" %}
You can access the request/response raw content using `{#request.content}`.

Depending on the content-type, you can access specific content.

**JSON content**

{% hint style="warning" %}
If a JSON payload has duplicate keys, APIM keeps the last key.

To avoid errors caused by duplicate keys, apply the JSON threat protection policy to the API. For more information about the JSON threat protection policy, see [https://github.com/taranvohra/gravitee-platform-docs/tree/docs-site/docs/apim/4.11/create-and-configure-apis/apply-policies/policy-reference/json-threat-protection/README.md](https://github.com/taranvohra/gravitee-platform-docs/tree/docs-site/docs/apim/4.11/create-and-configure-apis/apply-policies/policy-reference/json-threat-protection/README.md "mention").
{% endhint %}

You can access specific attributes of a JSON request/response payload with `{#request.jsonContent.foo.bar}`, where the request body is similar to the following example:

```json
{
  "foo": {
      "bar": "something"
  }
}
```

**XML content**

You can access specific tags of an XML request/response payload with `{#request.xmlContent.foo.bar}`, where the request body is similar to the following example:

```xml
<foo>
  <bar>something</bar>
</foo>
```
{% endtab %}
{% endtabs %}

## EL syntax and evaluation rules

Gravitee EL wraps Spring Expression Language (SpEL) with a template parser that recognizes three expression markers inside strings. Everything outside a marker is treated as literal text.

#### Expression markers

The EL template parser recognizes three markers, with optional whitespace allowed after the opening `{`:

* `{#...}`: evaluates a SpEL expression. This is the canonical EL marker.
* `{(...)}`: evaluates a parenthesized SpEL expression. Useful for inline evaluation inside a larger string.
* `{T(...)}`: evaluates a SpEL type reference, for example `{T(java.lang.String).format(...)}`.

Any `{...}` block that doesn't start with `#`, `(`, or `T` is left untouched and returned as literal text.

#### Condition fields

Gateway condition fields (for example, policy conditions and flow conditions) are evaluated by the gateway as a Boolean. The Gateway passes the raw field value to the template engine with `Boolean.class` as the target type. The template engine returns a Boolean, which the gateway uses to decide whether the condition matches.

If evaluation throws an `ExpressionEvaluationException`, the gateway logs a warning, raises an `EXPRESSION_EVALUATION_ERROR` execution warning, and treats the condition as non-matching (the element is filtered out).

#### Verified evaluation examples

The following examples reflect the behavior shipped with the Gateway:

<table><thead><tr><th width="260">Input</th><th width="220">Target type</th><th>Result</th></tr></thead><tbody><tr><td><code>true</code></td><td><code>Boolean</code></td><td><code>true</code></td></tr><tr><td><code>{#request.headers['X-Gravitee-Endpoint'] == null}</code></td><td><code>Boolean</code></td><td>Boolean result of the comparison</td></tr><tr><td><code>{#request.content.startsWith('pong')}</code></td><td><code>Boolean</code></td><td>Boolean result of the comparison</td></tr><tr><td><code>{1 == 1}</code></td><td><code>String</code></td><td>Literal <code>{1 == 1}</code> (not evaluated, no EL marker)</td></tr><tr><td><code>{(1 == 1)}</code></td><td><code>String</code></td><td><code>true</code></td></tr><tr><td><code>{(12 == 1)}</code></td><td><code>String</code></td><td><code>false</code></td></tr></tbody></table>

{% hint style="info" %}
The EL template parser only treats a `{...}` block as an expression if the first non-whitespace character inside is #, (, or T. A bare input like 1==1 or true written without any marker is returned as literal text by the template engine. For a Boolean condition field, wrap the comparison in an EL marker, for example `{#request.headers['X-Debug'] != null}` so the gateway evaluates it.
{% endhint %}

### EL versus Apache FreeMarker

Gravitee uses two different template languages in different places. They aren't interchangeable.

#### Where EL is used

EL is used in Gateway execution paths, including:

* Policy and flow condition fields.
* Any field documented as supporting EL.

EL expressions use `{#...}`, `{(...)}`, or `{T(...)}` markers.

#### Where FreeMarker is used

Gravitee notifiers render their configuration payloads (for example, the webhook notifier body) through Apache FreeMarker. The notifier base class builds a FreeMarker `Template` from the configured payload and processes it against a parameters map before dispatching the notification.

FreeMarker uses `${...}` placeholders and its own directive syntax, which is different from EL. For FreeMarker syntax, see the [Apache FreeMarker documentation](https://freemarker.apache.org/docs/index.html).

{% hint style="warning" %}
The notifier body is processed by FreeMarker, not the EL template engine. The EL parser doesn't recognize `${...}` as an expression marker, so FreeMarker syntax in a Gateway condition field is treated as literal text. Use the language that matches the field.
{% endhint %}

## Expression Language Assistant

### Overview

The Expression Language (EL) Assistant generates EL expressions based on natural language prompts. You describe the condition or logic you need, and the Assistant returns the corresponding EL syntax.

<figure><img src="https://128066588-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FbGmDEarvnV52XdcOiV8o%2Fuploads%2Fgit-blob-7672c60e0db5e4b1f2a071af3eba3f0b759cb7e3%2Fanim.gif?alt=media" alt=""><figcaption></figcaption></figure>

### Prerequisites

Before using the EL Assistant, complete the following:

* Register for a Gravitee Cloud account at [Cloud](https://cockpit.gravitee.io/).
* (Self-hosted and Hybrid installations only) Register your installation in Gravitee Cloud. For more information, see [Register installations.](https://documentation.gravitee.io/gravitee-cloud/self-hosted/register-installations)
* (Self-hosted and Hybrid installations only) Enable the EL Assistant by adding the following configuration:
* Enable the EL Assistant on the Management API.

{% hint style="warning" %}
The `newtai.elgen.enabled` setting is read by the Management API, not the Gateway. Apply it to the Management API's `gravitee.yml`, the Management API container's environment, or the `api.newtai.elgen` block of `values.yaml`. Setting it on the Gateway has no effect.
{% endhint %}

**Gravitee Cloud (SaaS) deployments**

In a Gravitee Cloud deployment, you don't operate the Management API, so you can't edit `gravitee.yml` or `values.yaml` yourself. [Contact Gravitee support ](https://www.gravitee.io/contact-us)to request that the EL Assistant be enabled on your environment.

**Self-hosted and Hybrid deployments**

Apply one of the following configurations to the Management API.

{% tabs %}
{% tab title="gravitee.yml" %}
Add the following configuration at the root level of the Management API's `gravitee.yml` file:

```yaml
newtai:
  elgen:
    enabled: true
```
{% endtab %}

{% tab title=".env" %}
Add the following line to the `.env` file loaded by the Management API container, or to that container's `environment:` block:

```bash
gravitee_newtai_elgen_enabled=true
```
{% endtab %}

{% tab title="Helm values.yaml" %}
Add the following configuration under the `api:` block of your `values.yaml` file. The key nests under `api.newtai.elgen`, not at the root of `values.yaml`.

```yaml
api:
  newtai:
    elgen:
      enabled: true
```
{% endtab %}
{% endtabs %}

### Generate Expression Language with the EL Assistant

{% hint style="info" %}
The EL Assistant is available in any field that supports Expression Language.
{% endhint %}

1.  In the field that supports Expression Language, click the **{EL}** icon.

    <figure><img src="https://128066588-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FbGmDEarvnV52XdcOiV8o%2Fuploads%2Fgit-blob-008c4fc76a06b5570f9af67bb2cfc51457ab629f%2F304A887B-9FD1-4011-961A-7DB7D91D3478_1_201_a.jpeg?alt=media" alt=""><figcaption></figcaption></figure>
2. In the **EL Assistant** pop-up window, enter a natural language prompt describing the Expression Language you need. For example: "Only run this policy if the header equals test."
3.  Click **Ask Newt AI**. The Assistant generates the corresponding Expression Language.

    <figure><img src="https://128066588-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FbGmDEarvnV52XdcOiV8o%2Fuploads%2Fgit-blob-7d9c2dbfbfb15a07488aef31b1f2ff476bc84c4c%2FDBE0A0C1-3171-4CA4-A586-A503EBD2B0BD_1_201_a.jpeg?alt=media" alt=""><figcaption></figcaption></figure>
4.  (Optional) Provide feedback by clicking the **thumbs up** or **thumbs down** icon.

    <figure><img src="https://128066588-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FbGmDEarvnV52XdcOiV8o%2Fuploads%2Fgit-blob-fdfd3541a28f3f38863088cd442a5d75838cbcc3%2F6D6E46F0-AECF-41F9-BE38-53C6EC0EDA38_1_201_a.jpeg?alt=media" alt=""><figcaption></figcaption></figure>

### Use case examples

The following examples demonstrate how to use the EL Assistant for common tasks.

#### Add a condition to a policy flow

To run a policy flow only when a header equals "test," enter the following prompt:

"Only run this policy flow if the header equals test."

The EL Assistant returns:

```
{#request.headers['Test_Endpoints_header'][0] == 'test'}
```

#### Target an endpoint

To configure a target URL for an endpoint that points to `https://jsonplaceholder.typicode.com/`, enter the following prompt:

"The target URL must target the following URL: https://jsonplaceholder.typicode.com/."

The EL Assistant returns:

```
{#context.attributes['https://jsonplaceholder.typicode.com']}
```

#### Add an assertion for API health checks

To create an assertion that validates an HTTP 200 response, enter the following prompt:

"Check only the status of the following HTTP response that equals 200."

The EL Assistant returns:

```
{#response.status == 200}
```

## APIs

Use the Gravitee Expression Language (EL) to access API transaction information through root-level objects injected into the EL context: custom properties, dictionaries, and endpoints.

### API object properties

The `{#api}` root-level object exposes metadata about the Gateway API handling the current transaction.

<table><thead><tr><th width="172">Object property</th><th width="260">Description</th><th width="108">Type</th><th>Example</th></tr></thead><tbody><tr><td>id</td><td>Gateway API identifier</td><td>string</td><td><code>{#api.id}</code></td></tr><tr><td>name</td><td>Gateway API name</td><td>string</td><td><code>{#api.name}</code></td></tr><tr><td>version</td><td>Gateway API version, as declared on the API definition</td><td>string</td><td><code>{#api.version}</code></td></tr><tr><td>properties</td><td>Custom properties defined on the API. See the Custom properties tab below for details</td><td>key / value</td><td><code>{#api.properties['my-property']}</code></td></tr></tbody></table>

{% tabs %}
{% tab title="Custom properties" %}
Define custom properties for your API. These properties are automatically injected into the expression language context and can be referenced during an API transaction from the `{#api.properties}` root-level object property.

**Examples**

* Get the value of the property `my-property` defined in an API's custom properties: `{#api.properties['my-property']}`
* Get the value of the property `my-secret` defined and encrypted in an API's custom properties: `{#api.properties['my-secret']}`

{% hint style="info" %}
**Encrypted custom properties**

When you access an encrypted custom property, the Gateway automatically decrypts it and provides a plain text value.
{% endhint %}
{% endtab %}

{% tab title="Dictionaries" %}
Dictionaries work similarly to custom properties, but you must specify both the dictionary ID and the dictionary property name. Dictionary properties are key-value pairs that can be accessed from the `{#dictionaries}` root-level object property.

**Example**

Get the value of the dictionary property `dict-key` defined in dictionary `my-dictionary-id`: `{#dictionaries['my-dictionary-id']['dict-key']}`.
{% endtab %}

{% tab title="Endpoints" %}
When you define endpoints for your API, assign each a unique name across all endpoints. Use this identifier to get an endpoint reference (a URI) from the `{#endpoints}` root-level object property.

**Example**

When you create an API, a default endpoint is created that corresponds to the backend property value. Retrieve this endpoint using the following syntax: `{#endpoints['default']}`.
{% endtab %}
{% endtabs %}

## Request

EL can be used to access request properties and attributes as described below.

### Request object properties

The object properties you can access from the `{#request}` root-level object property and use for API requests are listed below.

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="172">Object property</th><th width="157">Description</th><th width="134">Type</th><th>Example</th></tr></thead><tbody><tr><td>content</td><td>Body content</td><td>string</td><td>-</td></tr><tr><td>contextPath</td><td>Context path</td><td>string</td><td>/v2/</td></tr><tr><td>headers</td><td>Headers</td><td>key / value</td><td>X-Custom: myvalue</td></tr><tr><td>host</td><td>The host of the request. This is preferable to using the Host header of the request because HTTP2 requests do not provide this header.</td><td>string</td><td>gravitee.example.com</td></tr><tr><td>id</td><td>Identifier</td><td>string</td><td>12345678-90ab-cdef-1234-567890ab</td></tr><tr><td>localAddress</td><td>Local address</td><td>string</td><td>0:0:0:0:0:0:0:1</td></tr><tr><td>method</td><td>HTTP (Hypertext Transfer Protocol) method</td><td>string</td><td>GET</td></tr><tr><td>params</td><td>Query parameters</td><td>key / value</td><td>order: 100</td></tr><tr><td>path</td><td>Path</td><td>string</td><td>/v2/store/MyStore</td></tr><tr><td>pathInfo</td><td>Path info</td><td>string</td><td>/store/MyStore</td></tr><tr><td>pathInfos</td><td>Path info parts</td><td>array of strings</td><td>[,store,MyStore]</td></tr><tr><td>pathParams</td><td>Path parameters</td><td>key / value</td><td>storeId: MyStore (<em>see Warning for details</em>)</td></tr><tr><td>pathParamsRaw</td><td>Path parameters</td><td>string</td><td>/something/:id/**</td></tr><tr><td>paths</td><td>Path parts</td><td>array of strings</td><td>[,v2,store,MyStore]</td></tr><tr><td>remoteAddress</td><td>Remote address</td><td>string</td><td>0:0:0:0:0:0:0:1</td></tr><tr><td>scheme</td><td>The scheme of the request (either <code>http</code> or <code>https</code>)</td><td>string</td><td>http</td></tr><tr><td>ssl</td><td>SSL (Secure Sockets Layer) session information</td><td>SSL object</td><td>-</td></tr><tr><td>timestamp</td><td>Timestamp</td><td>long</td><td>1602781000267</td></tr><tr><td>transactionId</td><td>Transaction identifier</td><td>string</td><td>cd123456-7890-abcd-ef12-34567890</td></tr><tr><td>uri</td><td>URI (Uniform Resource Identifier)</td><td>string</td><td>/v2/store/MyStore?order=100</td></tr><tr><td>version</td><td>HTTP version</td><td>string</td><td>HTTP_1_1</td></tr></tbody></table>
{% endtab %}

{% tab title="Examples" %}
* Get the value of the `Content-Type` header for an incoming HTTP request: `{#request.headers['content-type']}`
* Get the second part of the request path: `{#request.paths[1]}`
{% endtab %}
{% endtabs %}

### Request context attributes

When APIM Gateway handles an incoming API request, some object properties are automatically created or added during the execution phase through the Assign Attributes policy. These object properties are known as attributes. Attributes can be accessed from the `{#context.attributes}` root-level object property.

Some policies (e.g., the OAuth2 policy) register other attributes in the request context. For more information, refer to the documentation for individual policies.

Request context attributes and examples are listed below:

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="190">Attribute key</th><th width="320">Description</th><th width="104">Type</th><th>Set by</th></tr></thead><tbody><tr><td>api</td><td>ID of the API handling the request</td><td>string</td><td>Gateway (always)</td></tr><tr><td>api.name</td><td>Name of the API handling the request</td><td>string</td><td>Gateway (always)</td></tr><tr><td>api.deployed-at</td><td>Timestamp of the last API deployment</td><td>long</td><td>Gateway (always)</td></tr><tr><td>api-key</td><td>The API key used by the consumer</td><td>string</td><td>API Key policy (only on API Key plans)</td></tr><tr><td>application</td><td>ID of the authenticated application</td><td>string</td><td>Security chain (empty for Keyless plans)</td></tr><tr><td>apiProduct</td><td>ID of the API Product associated with the current subscription</td><td>string</td><td>Subscription processor (only when the subscription belongs to an API Product)</td></tr><tr><td>plan</td><td>ID of the plan the consumer is subscribed to</td><td>string</td><td>Security chain</td></tr><tr><td>user</td><td>Authenticated user identifier</td><td>string</td><td>Security chain</td></tr><tr><td>user.roles</td><td>Roles granted to the authenticated user</td><td>list / array</td><td>Security chain</td></tr><tr><td>user-id</td><td>The user identifier of the incoming HTTP request. The subscription ID for an API Key plan, the remote IP for a Keyless plan</td><td>string</td><td>Gateway (always)</td></tr><tr><td>clientIdentifier</td><td>Stable client identifier used for rate limiting and logging. Derived from the subscription ID, a header, or the remote address</td><td>string</td><td>Subscription processor (always)</td></tr><tr><td>organization</td><td>ID of the organization the API belongs to</td><td>string</td><td>Gateway (always)</td></tr><tr><td>environment</td><td>ID of the environment the API is deployed in</td><td>string</td><td>Gateway (always)</td></tr><tr><td>context-path</td><td>Context path configured on the API listener</td><td>string</td><td>Gateway (always)</td></tr><tr><td>resolved-path</td><td>Path resolved from the flow selectors: the path defined in policies</td><td>string</td><td>Flow chain</td></tr><tr><td>mapped-path</td><td>Path mapping matched for analytics and logging</td><td>string</td><td>Gateway (always)</td></tr><tr><td>request.method</td><td>HTTP method of the current request</td><td>string</td><td>Gateway (always)</td></tr><tr><td>request.endpoint</td><td>Endpoint URI selected for the current request</td><td>string</td><td>Gateway (always)</td></tr><tr><td>request.endpoint.override</td><td>Endpoint URI explicitly overridden for the current request (for example, by the Dynamic Routing policy)</td><td>string</td><td>Dynamic routing / assign-attributes (only when overridden)</td></tr><tr><td>request.original-url</td><td>Full URL of the original request received by the Gateway, including scheme, host, and path</td><td>string</td><td>Gateway (always)</td></tr><tr><td>quota.count</td><td>Current value of the quota counter for the active subscription</td><td>long</td><td>Quota policy (only when a Quota policy is applied)</td></tr><tr><td>quota.limit</td><td>Configured quota limit</td><td>long</td><td>Quota policy (only when a Quota policy is applied)</td></tr><tr><td>quota.remaining</td><td>Remaining quota for the active subscription</td><td>long</td><td>Quota policy (only when a Quota policy is applied)</td></tr><tr><td>quota.reset.time</td><td>Timestamp at which the quota counter resets</td><td>long</td><td>Quota policy (only when a Quota policy is applied)</td></tr><tr><td>sni</td><td>Server Name Indication value from the TLS handshake</td><td>string</td><td>Gateway (only when TLS SNI is used)</td></tr></tbody></table>
{% endtab %}

{% tab title="Examples" %}
* Get the value of the `user-id` attribute for an incoming HTTP request: `{#context.attributes['user-id']}`
* Get the value of the `plan` attribute for an incoming HTTP request: `{#context.attributes['plan']}`
* Get the authenticated application ID: `{#context.attributes['application']}`
* Get the stable client identifier: `{#context.attributes['clientIdentifier']}`
{% endtab %}
{% endtabs %}

{% hint style="info" %}
**Attribute keys without the `gravitee.attribute.` prefix**

The Gateway stores context attributes with a `gravitee.attribute.` prefix (for example, `gravitee.attribute.plan`). Expression Language lookups through `{#context.attributes['...']}` accept either the short key or the fully prefixed key. Use the short keys shown in the table above for readability.
{% endhint %}

### SSL object properties

The object properties you can access in the `ssl` session object from the `{#request.ssl}` root-level object property are listed below.

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="172">Object property</th><th width="177">Description</th><th width="169">Type</th><th>Example</th></tr></thead><tbody><tr><td>clientHost</td><td>Host name of the client</td><td>string</td><td>client.domain.com</td></tr><tr><td>clientPort</td><td>Port number of the client</td><td>long</td><td>443</td></tr><tr><td>client</td><td>Client information</td><td>Principal object</td><td>-</td></tr><tr><td>server</td><td>Server information</td><td>Principal object</td><td>-</td></tr></tbody></table>
{% endtab %}

{% tab title="Example" %}
Get the client HOST from the SSL session: `{#request.ssl.clientHost}`
{% endtab %}
{% endtabs %}

#### Principal objects

The `client` and `server` objects are of type `Principal`. A `Principal` object represents the currently authenticated user who is making the request to the API and provides access to various user attributes such as username, email address, roles, and permissions.

The `Principal` object is typically used with security policies such as OAuth2, JWT (JSON Web Token), or basic authentication to enforce access control and authorization rules on incoming requests. For example, a policy can check if the current user has a specific role or permission before allowing them to access a protected resource.

If the `Principal` object is not defined, `client` and `server` object values are empty. Otherwise, there are domain name attributes you can access from the `{#request.ssl.client}` and `{#request.ssl.server}` `Principal` objects as shown in the table below:

{% hint style="warning" %}
**Limitation on arrays**

All attributes of the `Principal` object are flattened to be accessed directly with dot or bracket notation. While some of these attributes can be arrays, EL will only return the first item in the array. To retrieve all values of an attribute, use the `attributes` object property shown in the table and examples below.
{% endhint %}

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="218">Object property</th><th width="154">Description</th><th width="102">Type</th><th>Example</th></tr></thead><tbody><tr><td>attributes</td><td>Retrieves all the <code>Principal</code> object's domain name attributes</td><td>key / value</td><td>"ou": ["Test team", "Dev team"]</td></tr><tr><td>businessCategory</td><td>Business category</td><td>string</td><td>-</td></tr><tr><td>c</td><td>Country code</td><td>string</td><td>FR</td></tr><tr><td>cn</td><td>Common name</td><td>string</td><td>-</td></tr><tr><td>countryOfCitizenship</td><td>RFC 3039 CountryOfCitizenship</td><td>string</td><td>-</td></tr><tr><td>countryOfResidence</td><td>RFC 3039 CountryOfResidence</td><td>string</td><td>-</td></tr><tr><td>dateOfBirth</td><td>RFC 3039 DateOfBirth</td><td>string</td><td>19830719000000Z</td></tr><tr><td>dc</td><td>Domain component</td><td>string</td><td>-</td></tr><tr><td>defined</td><td>Returns <code>true</code> if the <code>Principal</code> object is defined and contains values. Returns <code>false</code> otherwise.</td><td>boolean</td><td>-</td></tr><tr><td>description</td><td>Description</td><td>string</td><td>-</td></tr><tr><td>dmdName</td><td>RFC 2256 directory management domain</td><td>string</td><td>-</td></tr><tr><td>dn</td><td>Fully qualified domain name</td><td>string</td><td>-</td></tr><tr><td>dnQualifier</td><td>Domain name qualifier</td><td>string</td><td>-</td></tr><tr><td>e</td><td>Email address in Verisign certificates</td><td>string</td><td>-</td></tr><tr><td>emailAddress</td><td>Email address (RSA PKCS#9 extension)</td><td>string</td><td>-</td></tr><tr><td>gender</td><td>RFC 3039 Gender</td><td>string</td><td>"M", "F", "m" or "f"</td></tr><tr><td>generation</td><td>Naming attributes of type X520name</td><td>string</td><td>-</td></tr><tr><td>givenname</td><td>Naming attributes of type X520name</td><td>string</td><td>-</td></tr><tr><td>initials</td><td>Naming attributes of type X520name</td><td>string</td><td>-</td></tr><tr><td>l</td><td>Locality name</td><td>string</td><td>-</td></tr><tr><td>name</td><td>Name</td><td>string</td><td>-</td></tr><tr><td>nameAtBirth</td><td>ISIS-MTT NameAtBirth</td><td>string</td><td>-</td></tr><tr><td>o</td><td>Organization</td><td>string</td><td>-</td></tr><tr><td>organizationIdentifier</td><td>Organization identifier</td><td>string</td><td>-</td></tr><tr><td>ou</td><td>Organization unit name</td><td>string</td><td>-</td></tr><tr><td>placeOfBirth</td><td>RFC 3039 PlaceOfBirth</td><td>string</td><td>-</td></tr><tr><td>postalAddress</td><td>RFC 3039 PostalAddress</td><td>string</td><td>-</td></tr><tr><td>postalCode</td><td>Postal code</td><td>string</td><td>-</td></tr><tr><td>pseudonym</td><td>RFC 3039 Pseudonym</td><td>string</td><td>-</td></tr><tr><td>role</td><td>Role</td><td>string</td><td>-</td></tr><tr><td>serialnumber</td><td>Device serial number name</td><td>string</td><td>-</td></tr><tr><td>st</td><td>State or province name</td><td>string</td><td>-</td></tr><tr><td>street</td><td>Street</td><td>string</td><td>-</td></tr><tr><td>surname</td><td>Naming attributes of type X520name</td><td>string</td><td>-</td></tr><tr><td>t</td><td>Title</td><td>string</td><td>-</td></tr><tr><td>telephoneNumber</td><td>Telephone number</td><td>string</td><td>-</td></tr><tr><td>uid</td><td>LDAP (Lightweight Directory Access Protocol) User id</td><td>string</td><td>-</td></tr><tr><td>uniqueIdentifier</td><td>Naming attributes of type X520name</td><td>string</td><td>-</td></tr><tr><td>unstructuredAddress</td><td>Unstructured address (from PKCS#9)</td><td>string</td><td>-</td></tr></tbody></table>
{% endtab %}

{% tab title="Examples" %}
**Standard object properties**

* Get the client DN from the SSL session: `{#request.ssl.client.dn}`
* Get the server organization from the SSL session: `{#request.ssl.server.o}`

**Arrays and boolean logic**

* Get all the organization units of the server from the SSL session:
  * `{#request.ssl.server.attributes['ou'][0]}`
  * `{#request.ssl.server.attributes['OU'][1]}`
  * `{#request.ssl.server.attributes['Ou'][2]}`
* Get a custom attribute of the client from the SSL session: `{#request.ssl.client.attributes['1.2.3.4'][0]}`
* Determine if the SSL attributes of the client are set: `{#request.ssl.client.defined}`
{% endtab %}
{% endtabs %}

## Response

The `{#response}` root-level object property provides access to API response data. The following table lists the available object properties.

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="172">Object property</th><th>Description</th><th width="125">Type</th><th>Example</th></tr></thead><tbody><tr><td>content</td><td>Body content</td><td>string</td><td>-</td></tr><tr><td>headers</td><td>Headers</td><td>key / value</td><td>X-Custom: myvalue</td></tr><tr><td>status</td><td>Status of the HTTP response</td><td>int</td><td>200</td></tr></tbody></table>
{% endtab %}

{% tab title="Example" %}
Get the status of an HTTP response:

```
{#response.status}
```
{% endtab %}
{% endtabs %}

## Message

The `{#message}` root-level object property provides access to API message properties. A message (sent or received) may contain attributes that can be retrieved via `{#message.attributes[key]}`.

{% hint style="info" %}
The EL (Expression Language) used for a message does not change based on phase. EL is executed on the message itself, so whether the message is sent in the subscribe or publish phase is irrelevant.
{% endhint %}

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="172">Object property</th><th>Description</th><th width="125">Type</th><th>Example</th></tr></thead><tbody><tr><td>attributeNames</td><td>The names of the attributes</td><td>list / array</td><td>-</td></tr><tr><td>attributes</td><td>Attributes attached to the message</td><td>key / value</td><td>-</td></tr><tr><td>content</td><td>Content of the message</td><td>string</td><td>-</td></tr><tr><td>contentLength</td><td>Size of the content</td><td>integer</td><td>-</td></tr><tr><td>error</td><td>Flag regarding the error state of the message</td><td>boolean</td><td>-</td></tr><tr><td>headers</td><td>Headers attached to the message</td><td>key / value</td><td>-</td></tr><tr><td>id</td><td>ID of the message</td><td>string</td><td>-</td></tr><tr><td>metadata</td><td>Metadata attached to the message</td><td>key / value</td><td>-</td></tr></tbody></table>
{% endtab %}

{% tab title="Examples" %}
* Get the value of the `Content-Type` header for a message: `{#message.headers['content-type']}`
* Get the size of a message: `{#message.contentLength}`
{% endtab %}
{% endtabs %}

### Writable message attributes by endpoint type

On v4 Message APIs, some endpoint connectors read writable attributes off the current context or message and use them to override their runtime behavior. Set these keys with the [Assign Attributes](create-and-configure-apis/apply-policies/policy-reference/assign-attributes.md) policy to change connector behavior per request or per message.

{% hint style="warning" %}
The keys in this section apply only to v4 Message APIs that attach the Kafka **endpoint connector**. These are APIs built with the **Introspect messages from event-driven backend** method (protocol mediation). For Kafka APIs built on the **Kafka Gateway** (native Kafka protocol), these keys have no effect: the Kafka Gateway routes traffic at the Kafka protocol level and doesn't read these Gravitee attributes. See the [Kafka Gateway](gravitee-expression-language.md#kafka-gateway) section below for the EL surface available on Kafka APIs.
{% endhint %}

{% tabs %}
{% tab title="Kafka endpoint" %}
The Kafka endpoint connector reads the following writable attributes. There are two prefixes: `gravitee.attribute.kafka.*` (hand-coded attribute names the connector reads at specific points) and `gravitee.attributes.endpoint.kafka.*` (handled by the endpoint's configuration evaluator and able to override any field on the shared configuration).

<table><thead><tr><th width="360">Attribute key</th><th width="170">Reads from</th><th>Effect</th></tr></thead><tbody><tr><td><code>gravitee.attribute.kafka.topics</code></td><td>Context (consumer and producer), message (producer fallback)</td><td>Overrides the consumer topic list, or the producer topic list when no <code>producer.topics</code> attribute is set on the message.</td></tr><tr><td><code>gravitee.attribute.kafka.groupId</code></td><td>Context</td><td>Overrides the consumer group ID for the request.</td></tr><tr><td><code>gravitee.attribute.kafka.recordKey</code></td><td>Message, falls back to context</td><td>Sets the produced record's key.</td></tr><tr><td><code>gravitee.attribute.kafka.avroKey</code></td><td>Message</td><td>Sets a raw byte-buffer key on the produced record. Short-circuits <code>recordKey</code> when set, and adds an <code>avroKey</code> header to the record.</td></tr><tr><td><code>gravitee.attributes.endpoint.kafka.producer.topics</code></td><td>Message</td><td>Per-message override of the producer topic list. Read before the <code>kafka.topics</code> fallback. Routes the message to a different topic than the one configured on the endpoint.</td></tr><tr><td><code>gravitee.attributes.endpoint.kafka.&#x3C;field></code></td><td>Context</td><td>Per-request override of any field on the endpoint's shared configuration. For example, <code>gravitee.attributes.endpoint.kafka.consumer.topics</code> overrides the consumer topic list, and <code>gravitee.attributes.endpoint.kafka.security.sasl.saslMechanism</code> overrides the SASL mechanism.</td></tr></tbody></table>

For full details on what each Kafka attribute does and when the connector reads it, see the [Kafka endpoint reference](create-and-configure-apis/configure-v4-apis/endpoints/kafka.md).
{% endtab %}
{% endtabs %}

### Message metadata by endpoint type

On v4 Message APIs (**Introspect messages from event-driven backend**), the gateway populates `{#message.metadata}` with keys specific to the endpoint connector that consumed the message from the backend. Use these keys in policy conditions, assign-attributes expressions, and dynamic routing to react to protocol-level data without parsing the payload.

{% hint style="info" %}
The **Kafka Gateway** section below documents a separate `{#message}` surface for Kafka-native APIs built on the Kafka Gateway. The metadata keys listed here apply to v4 Message APIs attached to the Kafka endpoint connector, not to the Kafka Gateway.
{% endhint %}

{% tabs %}
{% tab title="Kafka" %}
The Kafka endpoint populates the following metadata keys on each consumed record.

<table><thead><tr><th width="180">Metadata key</th><th width="280">Description</th><th width="100">Type</th><th>Example</th></tr></thead><tbody><tr><td>topic</td><td>Name of the Kafka topic the record was consumed from</td><td>string</td><td><code>{#message.metadata['topic']}</code></td></tr><tr><td>partition</td><td>Partition number the record was consumed from</td><td>int</td><td><code>{#message.metadata['partition']}</code></td></tr><tr><td>offset</td><td>Offset of the record within its partition</td><td>long</td><td><code>{#message.metadata['offset']}</code></td></tr><tr><td>key</td><td>Record key. Only set when the record has a key. Byte-array keys are decoded as UTF-8 strings.</td><td>string</td><td><code>{#message.metadata['key']}</code></td></tr></tbody></table>

**Examples**

*   Route only messages from the `orders` topic:

    ```bash
    {#message.metadata['topic'] == 'orders'}
    ```
*   Apply a policy only to records from partition `0`:

    ```bash
    {#message.metadata['partition'] == 0}
    ```
*   Build a CloudEvents `source` from the record coordinates:

    ```bash
    kafka://{#message.metadata['topic']}/{#message.metadata['partition']}/{#message.metadata['offset']}
    ```
*   Forward the record key as an upstream header value:

    ```bash
    {#message.metadata['key']}
    ```
{% endtab %}

{% tab title="MQTT5" %}
The MQTT5 endpoint populates the following metadata keys on each received publish packet.

<table><thead><tr><th width="210">Metadata key</th><th width="280">Description</th><th width="100">Type</th><th>Example</th></tr></thead><tbody><tr><td>topic</td><td>Topic the packet was published on</td><td>string</td><td><code>{#message.metadata['topic']}</code></td></tr><tr><td>type</td><td>MQTT5 packet type name reported by the client library</td><td>string</td><td><code>PUBLISH</code></td></tr><tr><td>qos</td><td>Numeric QoS level (<code>0</code>, <code>1</code>, or <code>2</code>)</td><td>int</td><td><code>{#message.metadata['qos']}</code></td></tr><tr><td>retain</td><td>Whether the retain flag was set on the publish</td><td>boolean</td><td><code>{#message.metadata['retain']}</code></td></tr><tr><td>contentType</td><td>MQTT5 content-type property, when the publisher set it</td><td>string</td><td><code>{#message.metadata['contentType']}</code></td></tr><tr><td>messageExpiryInterval</td><td>MQTT5 message expiry interval, in seconds. Returns <code>-1</code> when the publisher didn't set it.</td><td>long</td><td><code>{#message.metadata['messageExpiryInterval']}</code></td></tr><tr><td>responseTopic</td><td>MQTT5 response-topic property, when the publisher set it</td><td>string</td><td><code>{#message.metadata['responseTopic']}</code></td></tr></tbody></table>

**Examples**

*   Run a policy only for QoS 2 messages:

    ```bash
    {#message.metadata['qos'] == 2}
    ```
*   Route retained messages to a dedicated flow:

    ```bash
    {#message.metadata['retain'] == true}
    ```
{% endtab %}

{% tab title="Solace" %}
The Solace endpoint populates the following metadata keys on each received message.

<table><thead><tr><th width="210">Metadata key</th><th width="280">Description</th><th width="100">Type</th><th>Example</th></tr></thead><tbody><tr><td>senderId</td><td>Sender ID reported by Solace for the message</td><td>string</td><td><code>{#message.metadata['senderId']}</code></td></tr><tr><td>destinationName</td><td>Queue or topic name the message was consumed from</td><td>string</td><td><code>{#message.metadata['destinationName']}</code></td></tr><tr><td>senderTimestamp</td><td>Sender-side timestamp in epoch milliseconds. Returns <code>-1</code> when the message doesn't carry one.</td><td>long</td><td><code>{#message.metadata['senderTimestamp']}</code></td></tr><tr><td>isCached</td><td>Whether the message was delivered from the Solace cache</td><td>boolean</td><td><code>{#message.metadata['isCached']}</code></td></tr><tr><td>isRedelivered</td><td>Whether the message is a redelivery</td><td>boolean</td><td><code>{#message.metadata['isRedelivered']}</code></td></tr></tbody></table>

**Example**

*   Skip redelivered messages in a filtering policy:

    ```bash
    {#message.metadata['isRedelivered'] == false}
    ```
{% endtab %}

{% tab title="RabbitMQ" %}
The RabbitMQ endpoint always populates three envelope keys on every delivery. The remaining keys appear only when the publisher set the corresponding AMQP property.

<table><thead><tr><th width="200">Metadata key</th><th width="280">Description</th><th width="100">Type</th><th>Set when</th></tr></thead><tbody><tr><td>deliveryTag</td><td>Broker-assigned delivery tag for the current delivery</td><td>long</td><td>Always</td></tr><tr><td>exchange</td><td>Exchange the message was published through</td><td>string</td><td>Always</td></tr><tr><td>routingKey</td><td>Routing key used when the message was published</td><td>string</td><td>Always</td></tr><tr><td>appId</td><td>AMQP <code>app-id</code> property</td><td>string</td><td>Set by publisher</td></tr><tr><td>expiration</td><td>AMQP <code>expiration</code> property, as a string in milliseconds</td><td>string</td><td>Set by publisher</td></tr><tr><td>type</td><td>AMQP <code>type</code> property</td><td>string</td><td>Set by publisher</td></tr><tr><td>deliveryMode</td><td>AMQP <code>delivery-mode</code> (<code>1</code> for non-persistent, <code>2</code> for persistent)</td><td>int</td><td>Set by publisher</td></tr><tr><td>replyTo</td><td>AMQP <code>reply-to</code> property</td><td>string</td><td>Set by publisher</td></tr><tr><td>priority</td><td>AMQP <code>priority</code> property</td><td>int</td><td>Set by publisher</td></tr><tr><td>timestamp</td><td>AMQP <code>timestamp</code> property</td><td>date</td><td>Set by publisher</td></tr><tr><td>userId</td><td>AMQP <code>user-id</code> property</td><td>string</td><td>Set by publisher</td></tr></tbody></table>

**Example**

*   Route messages by routing key prefix:

    ```bash
    {#message.metadata['routingKey'].startsWith('payments.')}
    ```
{% endtab %}
{% endtabs %}

### Kafka Gateway

The Kafka Gateway uses a distinct set of Expression Language root objects that reflect Kafka protocol concepts rather than HTTP concepts. Use this section when configuring EL on Kafka APIs, for example, in endpoint configuration, policy conditions, or connection interruption rules.

{% hint style="warning" %}
The `#request`, `#response`, and `#message` objects on Kafka APIs expose different properties than the HTTP versions. HTTP-specific properties such as `#request.method`, `#request.headers`, or `#request.path` aren't available on Kafka APIs.
{% endhint %}

### EL availability by phase

The set of root objects available to an EL expression depends on the execution phase. Kafka APIs run through four distinct phases, each exposing a different variable surface.

<table><thead><tr><th width="200">Phase</th><th width="210">When it runs</th><th>Available root objects</th></tr></thead><tbody><tr><td>Entrypoint Connect</td><td>Before the Kafka client authenticates</td><td><code>#connection</code>, <code>#ssl</code>, <code>#context</code> (attributes and addresses only, no <code>principal</code>)</td></tr><tr><td>Connection</td><td>After the client authenticates, once per connection</td><td><code>#context</code> (with <code>principal</code> and <code>ssl</code>)</td></tr><tr><td>Request</td><td>Per Kafka protocol request (Produce, Fetch, Metadata, and others)</td><td><code>#request</code>, <code>#response</code>, <code>#context</code></td></tr><tr><td>Message</td><td>Per Kafka record, for message-level policies</td><td><code>#message</code>, plus everything available in the Request phase</td></tr></tbody></table>

#### Kafka context object properties

The `#context` root object on a Kafka API exposes connection-level and authentication data for the current client connection.

<table><thead><tr><th width="172">Object property</th><th width="260">Description</th><th width="120">Type</th><th>Example</th></tr></thead><tbody><tr><td>attributes</td><td>Context attributes associated with the Kafka connection</td><td>key / value</td><td><code>{#context.attributes['plan']}</code></td></tr><tr><td>remoteAddress</td><td>Remote address of the Kafka client</td><td>string</td><td><code>{#context.remoteAddress}</code></td></tr><tr><td>localAddress</td><td>Local address of the gateway listener</td><td>string</td><td><code>{#context.localAddress}</code></td></tr><tr><td>ssl</td><td>TLS session information for the client connection</td><td>SSL object</td><td><code>{#context.ssl.clientHost}</code></td></tr><tr><td>principal</td><td>Authenticated Kafka principal for the current connection</td><td>Principal object</td><td><code>{#context.principal.name}</code></td></tr></tbody></table>

**Kafka principal object properties**

The `#context.principal` object exposes the authenticated Kafka client identity.

<table><thead><tr><th width="172">Object property</th><th width="300">Description</th><th width="100">Type</th><th>Nullable</th></tr></thead><tbody><tr><td>name</td><td>The principal name as seen by the Kafka broker (for example, the SASL username or the certificate common name)</td><td>string</td><td>Yes. Returns <code>null</code> when no principal is set</td></tr><tr><td>token</td><td>The raw bearer token presented by the client</td><td>string</td><td>Yes. Populated only when the client authenticates with SASL OAUTHBEARER. Returns <code>null</code> for all other authentication methods, including PLAINTEXT, mTLS, SASL PLAIN, SASL SCRAM, and API Key plans</td></tr></tbody></table>

**Pass the client's OAuth token to the broker**

When a Kafka API is secured with SASL OAUTHBEARER and the gateway forwards the client's bearer token to the upstream Kafka broker, configure the endpoint's bearer token field as follows:

```
{#context.principal.token}
```

The gateway extracts the token from the authenticated client connection and reuses it when authenticating to the broker.

#### Kafka request object properties

The `#request` root object on a Kafka API exposes Kafka protocol-level metadata for the current operation. It's only available in the Request phase.

<table><thead><tr><th width="172">Object property</th><th width="260">Description</th><th width="108">Type</th><th>Example</th></tr></thead><tbody><tr><td>correlationId</td><td>Correlation ID of the Kafka request, returned as a string</td><td>string</td><td><code>12345</code></td></tr><tr><td>apiKey</td><td>Name of the Kafka protocol operation</td><td>string</td><td><code>PRODUCE</code>, <code>FETCH</code>, <code>METADATA</code></td></tr><tr><td>apiVersion</td><td>Version of the Kafka protocol operation</td><td>int</td><td><code>10</code></td></tr><tr><td>clientId</td><td>Client ID sent by the Kafka client in the request header</td><td>string</td><td><code>my-kafka-producer</code></td></tr></tbody></table>

{% hint style="warning" %}
**`#request.apiKey` isn't the Gravitee API Key plan.** On Kafka APIs, `#request.apiKey` returns the Kafka protocol operation name (for example, `PRODUCE` or `FETCH`). To read the API key value used by a Gravitee API Key plan, use `{#context.attributes['api-key']}` instead.
{% endhint %}

#### Kafka response object properties

The `#response` root object is registered for Kafka APIs but doesn't currently expose any properties. Don't rely on `#response.*` expressions on Kafka APIs.

#### Kafka message object properties

For policies that run on individual Kafka records, for example the Kafka Message Filtering policy, the `#message` root object exposes record-level data.

<table><thead><tr><th width="172">Object property</th><th width="260">Description</th><th width="108">Type</th><th>Example</th></tr></thead><tbody><tr><td>topic</td><td>Name of the Kafka topic the record belongs to</td><td>string</td><td><code>orders</code></td></tr><tr><td>key</td><td>Record key, as a string</td><td>string</td><td><code>customer-42</code></td></tr><tr><td>content</td><td>Record value body, as a string</td><td>string</td><td><code>{"total":100}</code></td></tr><tr><td>contentLength</td><td>Length of the record value body</td><td>int</td><td><code>14</code></td></tr><tr><td>headersString</td><td>Record headers with values decoded as strings</td><td>key / value</td><td><code>{#message.headersString['trace-id']}</code></td></tr><tr><td>headersRaw</td><td>Record headers with raw byte-array values</td><td>key / value</td><td>-</td></tr><tr><td>metadata</td><td>Metadata attached to the message by the gateway</td><td>key / value</td><td><code>{#message.metadata['partition']}</code></td></tr><tr><td>error</td><td>Flag indicating whether the record is in an error state</td><td>boolean</td><td><code>false</code></td></tr></tbody></table>

#### Entrypoint Connect phase context

At the Entrypoint Connect phase, where policies run before the Kafka client authenticates, such as connection interruption rules, the EL context is intentionally reduced. Only connection-level data is available.

<table><thead><tr><th width="200">Root object</th><th width="200">Property</th><th>Description</th></tr></thead><tbody><tr><td><code>#connection</code></td><td>id</td><td>Stable identifier for the client connection</td></tr><tr><td><code>#connection</code></td><td>remoteAddress</td><td>Address of the Kafka client</td></tr><tr><td><code>#connection</code></td><td>localAddress</td><td>Address of the gateway listener</td></tr><tr><td><code>#ssl</code></td><td>(SSL object)</td><td>TLS session for the client connection, if SSL is configured</td></tr><tr><td><code>#context</code></td><td>attributes</td><td>Context attributes set before authentication</td></tr><tr><td><code>#context</code></td><td>remoteAddress</td><td>Remote address of the Kafka client</td></tr><tr><td><code>#context</code></td><td>localAddress</td><td>Local address of the gateway listener</td></tr></tbody></table>

{% hint style="warning" %}
`#context.principal`, `#request`, `#response`, and `#message` aren't available in the Entrypoint Connect phase because authentication hasn't occurred and no Kafka protocol request has been received yet. Referencing them in an EL expression evaluated at this phase returns `null` or raises an evaluation error.
{% endhint %}

### Subscription

The `{#subscription}` root-level object exposes information about the consumer subscription that authenticated the current API transaction. It's available once the security chain has resolved a subscription in practice, from the Request phase onward for every non-Keyless plan.

<table><thead><tr><th width="180">Object property</th><th width="320">Description</th><th width="108">Type</th><th>Example</th></tr></thead><tbody><tr><td>id</td><td>Subscription identifier</td><td>string</td><td><code>{#subscription.id}</code></td></tr><tr><td>type</td><td>Subscription type. One of <code>STANDARD</code> or <code>PUSH</code></td><td>string</td><td><code>{#subscription.type}</code></td></tr><tr><td>applicationName</td><td>Name of the application that owns the subscription</td><td>string</td><td><code>{#subscription.applicationName}</code></td></tr><tr><td>clientId</td><td>OAuth2 client ID associated with the subscription, if the plan uses one</td><td>string</td><td><code>{#subscription.clientId}</code></td></tr><tr><td>apiProductId</td><td>Identifier of the API Product associated with the subscription, if the subscription was created through an API Product</td><td>string</td><td><code>{#subscription.apiProductId}</code></td></tr><tr><td>metadata</td><td>Key / value metadata attached to the subscription by the API publisher</td><td>key / value</td><td><code>{#subscription.metadata['clientType']}</code></td></tr></tbody></table>

{% hint style="info" %}
**Referencing the authenticated application from EL**

To reference the application that owns the current subscription, use `{#subscription.applicationName}` for the application name or `{#context.attributes['application']}` for the application ID. There's no dedicated `#application` root-level object.
{% endhint %}

**Examples**

* Route based on the subscribing application: `{#subscription.applicationName == 'partner-portal'}`
* Compare a subscription metadata value to a literal string: `{#subscription.metadata['clientType'].equals('PARTNER')}`
* Forward the subscription ID to the upstream as a header: `{#subscription.id}`

## Nodes

A node is a component that represents an instance of the Gravitee Gateway. Each node runs a copy of the Gateway that handles incoming requests, executes policies, and forwards requests to upstream services. The object properties you can access for nodes from the `{#node}` root-level object property are listed below.

{% tabs %}
{% tab title="Table" %}
<table><thead><tr><th width="179">Object property</th><th width="153">Description</th><th width="94">Type</th><th>Example</th></tr></thead><tbody><tr><td>id</td><td>Node ID</td><td>string</td><td>975de338-90ff-41ab-9de3-3890ff41ab62</td></tr><tr><td>shardingTags</td><td>Node sharding tag</td><td>array of string</td><td>[internal,external]</td></tr><tr><td>tenant</td><td>Node tenant</td><td>string</td><td>Europe</td></tr><tr><td>version</td><td>Node version</td><td>string</td><td>3.14.0</td></tr><tr><td>zone</td><td>Zone the node is grouped in</td><td>string</td><td>europe-west-2</td></tr></tbody></table>
{% endtab %}

{% tab title="Example" %}
Get the version of a node: `{#node.version}`
{% endtab %}
{% endtabs %}

## Other tips and tricks

### Cast data

To convert or cast a string value into an integer, use the following EL:

```
{T(java.lang.Integer).parseInt("some_string")}
```

### Evaluate different field types

Use this technique when comparing values of different field types. For example, if `subscription.metadata['my_key']` is a string but the value in request/message content is numeric, use the following EL to compare them:

```
{(""+#jsonPath(#message.content, '$.customerId')).equals(""+ #subscription.metadata['my_key'])}
```

### Compare values

Gravitee reads EL data by looking for expressions starting with `{`, followed by `#`, `T`, or `(`. If it finds one of these patterns, it treats the entire string as a single expression to evaluate. Otherwise, it treats it as a string template.

This won't work:

```
{"PARTNER".equals(#subscription.metadata['clientType'])}
```

These will work:

```
{("PARTNER".equals(#subscription.metadata['clientType']))}
{("PARTNER").equals(#subscription.metadata['clientType'])}
{#subscription.metadata['clientType'].equals("PARTNER")}
```

{% hint style="info" %}
`{#request.content}` is only available for policies bound to an `on-request-content` phase.
{% endhint %}
